--- a/app_unidade_associada/templates/unidade_list.html
+++ b/app_unidade_associada/templates/unidade_list.html
@@ -1,11 +1,15 @@
+{% extends 'base.html' %}
+{% load cargo_tags %}
+{% block content %}
 <h1>Lista de Unidades Associadas</h1>
 <head>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
-<a href="{% url 'unidade_create' %}" class="btn btn-primary btn-sm">
-    <i class="fas fa-plus"></i> Adicionar Nova Unidade
-</a>
-
+{% if user|is_coordenador %}
+    <a href="{% url 'unidade_create' %}" class="btn btn-primary btn-sm">
+        <i class="fas fa-plus"></i> Adicionar Nova Unidade
+    </a>
+{% endif %}
 <hr>
 
 <table>
@@ -25,8 +29,10 @@
             <td>{{ unidade.Status|yesno:"Ativo,Inativo" }}</td>
             <td>{{unidade.Estado_UF}}</td>
             <td>
+                {% if user|is_coordenador %}
                 <a href="{% url 'unidade_update' pk=unidade.pk %}" class="btn btn-warning btn-sm">
                     <i class="fas fa-pencil-alt"></i> </a>
+                {% endif %}
             </td>
         </tr>
         {% empty %}
@@ -36,3 +42,4 @@
         {% endfor %}
     </tbody>
 </table>
+{% endblock content %}
